change framework from bootstrap to materialize

--- a/style.css
+++ b/style.css
@@ -1,66 +1,6 @@
-.jumbotron{
-   
-    background-image: url("images/ftbg.jpg");
-    z-index: -1
-
-}
-
-#zoid{
-    height:40%;
-    width:40%;
-    z-index: 0; 
-
-}
-
-#zoid2{
-    height: 40%;
-    width: 40%;
-    z-index: 0;
-}
-
-
-body {
-    background-color: blueviolet;
-}
-
-#letters{
-    clear:left;
-}
-
-#guess{
-
-    width: 800px;
-    height: 396px;
-    margin-left:300px;
-}
-
-#lives{
-    margin-left: 360px;
-}
-
-#lives, #wins, #losses{
-    position: absolute;
-    display: inline-block;
-    
-}
-
-#wrong{
-    clear:left;
-}
-
 body{
-    background-image: url("images/planteExpress2.jpg");
-}
-
-#bender{
-    margin-left:250px;
-    margin-top:50px;
-    height:35%;
-    width:35%;
-}
-
-#booth{
-    background-image:url("images/booth.png");
-    width: 800px;
-    height: 396px;
+    background-image: url("/images/planteExpress2.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: #69dbc7;
 }
